--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -20,17 +20,15 @@ body {
 }
 
 #main-container {
-    border: 2px solid brown;
-    padding: 10px;
+    /* padding: 10px; */
     height: 100vh;
     width: 100%;
 }
 
-#main-container>#nav {
+#nav-container>#nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border: 2px solid red;
     background-color: black;
     /* padding: 10px; */
     height: 50px;
@@ -51,7 +49,6 @@ body {
     gap: 20px;
     width: 80%;
     height: 50px;
-    border: 2px solid green;
 
 }
 
@@ -75,16 +72,18 @@ a>img {
 }
 
 .sidenav {
-    height: 100%;
-    width: 0;
+    height: 80%;
+    width: 20%;
     position: fixed;
     z-index: 1;
     top: 0;
     left: 0;
     background-color: #111;
-    overflow-x: hidden;
+    overflow:scroll;
     transition: 0.5s;
     padding-top: 60px;
+    overflow-x: hidden; 
+
 }
 
 .sidenav a {
