--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,27 +1,33 @@
-#footer{
+#footer {
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(3, 1fr);
     width: 100%;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     color: white;
     background-color: rgb(61, 58, 58);
+    position: fixed;
     bottom: 0;
-    position: absolute;
-    height:50%;
-    padding: 10px;
-
+    height: 30%;
+    overflow-y:scroll;
 }
-input{
+
+input {
     height: 40px;
     width: 40%;
 }
-#footer1 ,#footer2,#footer3{
-    margin-top: -30%;
+
+#footer1,
+#footer2,
+#footer3 {
     border-right: 2px solid white;
-    text-align:center ;
+    text-align: center;
+    padding: 10px;
+    font-size: 15px;
+
 }
-a:hover{
+
+a:hover {
     color: rgb(24, 243, 188);
- 
+
 }
