--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -17,6 +17,7 @@ body {
     height: 100vh;
     width: 100%;
     font-family: Georgia;
+    overflow-x: visible;
 }
 
 #main-container {
@@ -34,80 +35,84 @@ body {
     height: 50px;
     width: 100%;
     color: white;
-}
-
-#logo>img {
-    width: 150px;
-    height: 40px;
-    border-radius: 10px;
-    margin-left: 30%;
-
-}
-
-#nav-links {
-    display: flex;
-    gap: 20px;
-    width: 80%;
-    height: 50px;
-
-}
-
-#nav-links>input {
-    height: 50px;
-    width: 50%;
-    font-size: 20px;
-    margin-left: 20px;
-}
-
-a {
-    text-decoration: none;
-    font-size: 20px;
-    color: white;
-}
-
-a>img {
-    height: 30px;
-    color: white;
-    margin-top: 10px;
-}
-
-.sidenav {
-    height: 80%;
-    width: 20%;
     position: fixed;
-    z-index: 1;
     top: 0;
     left: 0;
-    background-color: #111;
-    overflow:scroll;
-    transition: 0.5s;
-    padding-top: 60px;
-    overflow-x: hidden; 
+    z-index: 1000;
 
 }
+    #logo>img {
+        width: 150px;
+        height: 40px;
+        border-radius: 10px;
+        margin-left: 30%;
 
-.sidenav a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    transition: 0.3s;
-}
+    }
 
-.sidenav a:hover {
-    color: #f1f1f1;
-}
+    #nav-links {
+        display: flex;
+        gap: 20px;
+        width: 80%;
+        height: 50px;
 
-.sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-}
+    }
 
-span {
-    font-size: 20px;
-    margin-top: 10px;
-}
+    #nav-links>input {
+        height: 50px;
+        width: 50%;
+        font-size: 20px;
+        margin-left: 20px;
+    }
+
+    a {
+        text-decoration: none;
+        font-size: 20px;
+        color: white;
+    }
+
+    a>img {
+        height: 30px;
+        color: white;
+        margin-top: 10px;
+    }
+
+    .sidenav {
+        height: 80%;
+        width: 20%;
+        position: fixed;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        background-color: #111;
+        overflow: scroll;
+        transition: 0.5s;
+        padding-top: 60px;
+        overflow-x: hidden;
+
+    }
+
+    .sidenav a {
+        padding: 8px 8px 8px 32px;
+        text-decoration: none;
+        font-size: 25px;
+        color: #818181;
+        display: block;
+        transition: 0.3s;
+    }
+
+    .sidenav a:hover {
+        color: #f1f1f1;
+    }
+
+    .sidenav .closebtn {
+        position: absolute;
+        top: 0;
+        right: 25px;
+        font-size: 36px;
+        margin-left: 50px;
+    }
+
+    span {
+        font-size: 20px;
+        margin-top: 10px;
+    }
