--- a/styles/footer.css
+++ b/styles/footer.css
@@ -6,10 +6,11 @@
     border-top-right-radius: 10px;
     color: white;
     background-color: rgb(61, 58, 58);
-    position: fixed;
     bottom: 0;
-    height: 30%;
-    overflow-y:scroll;
+    position: absolute;
+    height: fit-content;
+    gap: 20px;
+
 }
 
 input {
@@ -17,14 +18,18 @@ input {
     width: 40%;
 }
 
-#footer1,
-#footer2,
-#footer3 {
+#footer>.footerLinks {
     border-right: 2px solid white;
     text-align: center;
     padding: 10px;
     font-size: 15px;
+    width: 100%;
 
+
+}
+
+.footerLinks>a {
+    font-size: 15px;
 }
 
 a:hover {
