--- a/styles/index.css
+++ b/styles/index.css
@@ -16,18 +16,21 @@
     max-width: 100%;
     margin: auto;
     overflow:hidden;
-}  
+    height:400px;
+} 
 .slide{
+    width: 100%;
+    max-height: 30%;
     display: none;
 }
 .slide img {
     width: 100%;
-    height:fit-content;
+    height:30%;
   }
   .prev, .next {
     position: absolute;
     top: 50%;
-    padding: 16px;
+    padding: 15px;
     color: white;
     font-weight: bold;
     font-size: 18px;
