--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -14,16 +14,15 @@
 */
 
 body {
-    height: 100vh;
+    height: 100%;
     width: 100%;
-    font-family: Georgia;
-    overflow-x: visible;
-}
+    font-family: Georgia;}
 
 #main-container {
     /* padding: 10px; */
-    height: 100vh;
+    height: 100%;
     width: 100%;
+    border: 2px solid red;
 }
 
 #nav-container>#nav {
@@ -54,11 +53,12 @@ body {
         gap: 20px;
         width: 80%;
         height: 50px;
+        padding: 10px;
 
     }
 
     #nav-links>input {
-        height: 50px;
+        height: 30px;
         width: 50%;
         font-size: 20px;
         margin-left: 20px;
@@ -68,12 +68,14 @@ body {
         text-decoration: none;
         font-size: 20px;
         color: white;
+        padding: 1px;
+        
     }
 
     a>img {
-        height: 30px;
+        height: 20px;
         color: white;
-        margin-top: 10px;
+       
     }
 
     .sidenav {
