--- a/styles/index.css
+++ b/styles/index.css
@@ -1,55 +1,100 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    text-align: center;
-    overflow: scroll;
-  }
-
-#cont-img{
-    position: absolute;
-    max-width: 100%;
-    margin: auto;
-    overflow:hidden;
-    height:fit-content;
-} 
-.slide{
-    width: 100%;
-    max-height: 30%;
-    display: none;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
+  text-align: center;
+  overflow: scroll;
+}
+
+#cont-img {
+  max-width: 100%;
+  height: fit-content;
+}
+
+.slide {
+  width: 100%;
+  max-height: 30%;
+  display: none;
+}
+
 .slide img {
-    width: 100%;
-    height:30%;
-  }
-  .prev, .next {
-    position: absolute;
-    top: 50%;
-    padding: 15px;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    background-color: rgba(0, 0, 0, 0.5);
-    border: none;
-    cursor: pointer;
-    border-radius: 50%;
-    user-select: none;
-    transform: translateY(-50%);
-  }
-  
-  .prev {
-    left: 0;
-  }
-  
-  .next {
-    right: 0;
-  }
-  
-  .prev:hover, .next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-  }
+  width: 100%;
+  height: 30%;
+}
+
+.prev,
+.next {
+  position: absolute;
+  top: 50%;
+  padding: 15px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: none;
+  cursor: pointer;
+  border-radius: 50%;
+  user-select: none;
+  transform: translateY(-50%);
+}
+
+.prev {
+  left: 0;
+}
+
+.next {
+  right: 0;
+}
+
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+#bank-offers {
+  border: 2px solid black;
+  margin-top: 30%;
+}
+
+.banks {
+  display: flex;
+  width: 100%;
+  margin: auto;
+}
+
+.banks>img {
+  width: 40%;
+  margin: 1rem auto;
+}
+
+#new {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+  width: 80%;
+}
+#new>img{
+  width: 650px;
+  margin: auto;
+  padding-left: 20px;
+}
+#products{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  width: 100%;
+  height: fit-content;
+  padding: 10px;
+  margin: auto;
+  gap: 10px;
+  justify-items: center;
+}
+#products>img{
+  width: 400px;
+  height: 300px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
