--- a/styles/television.css
+++ b/styles/television.css
@@ -1,28 +1,42 @@
 body{
-    background-color: rgb(37, 36, 36);
+    background-color: rgb(20, 19, 19);
    
 }
 #cont>#card-div{
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    border: 2px solid grey;
     width: 100%;
     height: fit-content;
     padding: 10px;
     margin: auto;
 }
 .card{
-    height:fit-content;
+    /* height:fit-content; */
     width: 400px;
-    border: 2px solid red;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     margin-top: 20px;
     padding: 10px;
+    height: 600px;
+}
+#pruductImg {
+    height: 350px;
 }
 #filters{
 width: 100%;
-border: 2px solid blue;
 margin-top: 10%;
 }
 .card>h4>a{
     color: black;
+}
+button {
+    padding: 10px 20px;
+    margin: 5px;
+    cursor: pointer;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+}
+button:hover {
+    background-color: #45a049;
 }
