--- a/styles/footer.css
+++ b/styles/footer.css
@@ -32,3 +32,31 @@ a:hover {
     color: rgb(24, 243, 188);
 
 }
+
+/* Adding Meadia Query on cards */
+/* For large screen */
+@media (min-width:1024px) and (max-width:1250px) {
+    .card {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+/* for Medium screen */
+@media (min-width:768px) and (max-width:1023px) {
+    .card {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        /* border: 2px solid red; */
+
+    }
+}
+
+/* for small screen */
+@media (min-width:320px) and (max-width:767px) {
+    .card {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+
+    }
+}
