--- a/styles/index.css
+++ b/styles/index.css
@@ -27,9 +27,9 @@ body {
   transition: transform 0.5s ease;
 }
 
-.slider img {
+.slide img {
   width: 100%;
-  height: auto;
+  height: 600px;
 }
 
 .prev, .next {
