--- a/styles/login.css
+++ b/styles/login.css
@@ -3,7 +3,7 @@
 }
 #form {
     width: 50%;
-    height: 350px;
+    height: 400px;
     margin: 2rem auto;
     background-color: white;
     padding: 20px;
@@ -12,19 +12,18 @@
     font-size: 1.2rem;
 
 }
-
+#form input {
+    height: 20px;
+    width: 50%;
+    color: black;
+    margin: auto;
+    background-color: whitesmoke;
+    margin-top: 10px;
+}
 h3 {
     font-size: 2rem;
     background-color: white;
 }
-
-#form input {
-    height: 20px;
-    width: 80%;
-    color: black;
-    background-color: whitesmoke;
-}
-
 select {
     height: 20px;
     width: 80%;
@@ -47,33 +46,4 @@ select {
 #submit:hover {
     background-color: rgb(165, 80, 245);
     transition: background-color 1s ease;
-}
-
-
-/* Adding Meadia Query on cards */
-/* For large screen */
-@media (min-width:1024px) and (max-width:1250px) {
-    .card {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-    }
-}
-
-/* for Medium screen */
-@media (min-width:768px) and (max-width:1023px) {
-    .card {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        /* border: 2px solid red; */
-
-    }
-}
-
-/* for small screen */
-@media (min-width:320px) and (max-width:767px) {
-    .card {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-
-    }
 }
