--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -20,8 +20,9 @@ body {
 }
 
 #main-container {
-    height: 100%;
+    height: fit-content;
     width: 100%;
+    margin: auto;
 }
 
 #nav-container>#nav {
